--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter()
+        maven {
+            url = uri("https://customers.pspdfkit.com/maven")
+        }
     }
 }
 rootProject.name = "Book app with Firebase"
